--- a/index.html
+++ b/index.html
@@ -199,40 +199,40 @@
 
                 <div class="col-2-3">
 
-                    <a href="#" class="col-3">
+                    <a  class="col-3">
                         <img src="images/company-images/company-logo1.png" alt="Company"/>
                         <div class="client-overlay"><span>Ansiedad</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <a  class="col-3">
                         <img src="images/company-images/company-logo2.png" alt="Company"/>
                         <div class="client-overlay"><span>Depresión</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <a  class="col-3">
                         <img src="images/company-images/company-logo3.png" alt="Company"/>
                         <div class="client-overlay"><span>Estrés</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <a  class="col-3">
                         <img src="images/company-images/company-logo4.png" alt="Company"/>
                         <div class="client-overlay"><span>TOC</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <a = class="col-3">
                         <img src="images/company-images/company-logo5.png" alt="Company"/>
                         <div class="client-overlay"><span>Problemas vinculares</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <a  class="col-3">
                         <img src="images/company-images/company-logo6.png" alt="Company"/>
                         <div class="client-overlay"><span>Personalidad</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <a  class="col-3">
                         <img src="images/company-images/company-logo7.png" alt="Company"/>
                         <div class="client-overlay"><span>Autoestima</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <a  class="col-3">
                         <img src="images/company-images/company-logo8.png" alt="Company"/>
                         <div class="client-overlay"><span>Toma de decisiones</span></div>
                     </a>
 
-                    <a href="#" class="col-3">
+                    <a class="col-3">
                         <img src="images/company-images/company-logo9.png" alt="Company"/>
                         <div class="client-overlay"><span>Angustia</span></div>
                     </a>
