--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="section-heading">
                     <h1>SOFÍA VALLORY</h1>
                     <h4 id="matricula">M.N.: 73459 </h4>
-                    <h2>Mi nombre es Sofia Vallory, soy Licenciada en psicología y me especializo en la Terapia Cognitiva Conductual (TCC) bajo el modelo integrativo
+                    <h2>Mi nombre es Sofia Vallory, soy Licenciada en psicología y me especializo en la Terapia Cognitiva Conductual (TCC) bajo el modelo integrativo.
                         </h2>
                 </div>
 
@@ -272,7 +272,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4 class="mayuscula">PSICOTERAPIA INDIVIDUAL</h4>
-                            <p>Tratamiento psicológico de adultos y adolescentes en modalidad virtual y presencial
+                            <p>Tratamiento psicológico de adultos y adolescentes en modalidad virtual y presencial.
                             </p>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4 class="mayuscula">Empresas</h4>
-                            <p>Evaluaciones psicológicas laborales. Servicio de consultoría de RRHH</p>
+                            <p>Evaluaciones psicológicas laborales. Servicio de consultoría de RRHH.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
