--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="section-heading">
                     <h1>SOFÍA VALLORY</h1>
                     <h4 id="matricula">M.N.: 73459 </h4>
-                    <h2>Mi nombre es Sofia Vallory, soy Licenciada en psicología y me especializo en la Terapia Cognitiva Conductual (TCC) bajo el modelo integrativo.
+                    <h2>Mi nombre es Sofia Vallory, soy Licenciada en psicología y me especializo en la Terapia Cognitivo Conductual (TCC) bajo el modelo integrativo.
                         </h2>
                 </div>
 
@@ -162,7 +162,7 @@
                     <h2 class="section-title">¿EN QUÉ CONSISTE LA TERAPIA?</h2>
                     <p class="section-subtitle">Dentro de la psicología existen varios estilos de terapia. Mi metodología de trabajo se enfoca en la terapia basada en la evidencia, lo cual refiere a aplicar un tratamiento psicológico teniendo en cuenta los resultados de lo que la investigación científica ha demostrado que es más eficaz en cada problema.</p>
                 </div>
-                <p>La TCC tiene como objetivo interpretar la forma que el paciente tiende a percibir el mundo que lo rodea, para así poder identificar y modificar patrones de comportamiento, tanto como creencias nucleares, que generan malestar en la vida del paciente. Por su parte, el modelo integrativo de psicoterapia permite establecer un análisis más profundo y completo de la vida del paciente. 
+                <p>La TCC tiene como objetivo interpretar la forma en que el paciente tiende a percibir el mundo que lo rodea, para así poder identificar y modificar patrones de comportamiento, tanto como creencias nucleares, que generan malestar en la vida del paciente. Por su parte, el modelo integrativo de psicoterapia permite establecer un análisis más profundo y completo de la vida del paciente. 
                 <p>
                     Tiene como base a la terapia cognitiva (por su evidencia científica) y presta especial atención a la personalidad como eje fundamental de trabajo, ya que esta tiene poder causal sobre las acciones del paciente y además modula su experiencia. Para poder lograr esto, el modelo integrativo articula los ejes dominantes de los otros enfoques de la psicología: el psicodinámico, sistémico y humanístico existencial. 
                 </p>
@@ -256,7 +256,7 @@
                     <div class="section-heading">
                         <h3>SERVICIOS</h3>
                         <h2 class="section-title">AREAS DE ESPECIALIZACIÓN</h2>
-                        <p class="section-subtitle">A lo largo de mi trayectoria profesional me desempeño en diferentes ámbitos de aplicación de la psicología que incluye clínica, laboral y educacional.</p>
+                        <p class="section-subtitle">Me desempeño en diferentes ámbitos de aplicación de la psicología: clínica, laboral y educacional.</p>
                     </div>
 
                 </div>
@@ -388,7 +388,7 @@
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
 
-            <p id="copyright" class="col-2">Made with love by <a href="https://www.shapingrain.com">ShapingRain</a></p>
+            <p id="copyright" class="col-2"><a href="https://www.shapingrain.com">ShapingRain</a></p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
@@ -405,7 +405,6 @@
             </ul>
             <!--End of Social Icons in Footer-->
         </div>
-        <p><div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></p>
     </footer>
     <!--End of Footer-->
 
