--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                 <div class="section-heading">
                     <h1>SOFÍA VALLORY</h1>
-                    <h4 id="matricula">M.N.: 73459 </h4>
+                    ## <h4 id="matricula">M.N.: 73459 </h4>
                     <h2>Mi nombre es Sofia Vallory, soy Licenciada en psicología y me especializo en la Terapia Cognitivo Conductual (TCC) bajo el modelo integrativo.
                         </h2>
                 </div>
